--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ Markdown==2.5.1
 django-markitup==2.3.0
 
 requests==2.6.0
+requests-mock==0.7.0
 elasticsearch==0.4.5
 django-haystack==2.4.1
 # Required (but not a declared requirement) of elasticsearch
